# SahitAssist

./: LICENSE  README.md  pyproject.toml
data/: anmol_lipi_mapping.csv
examples/: sample_input.txt
punjabi_book_translator/: __init__.py  cli.py  config.py  embeddings.py  normalization.py  pipeline.py  schema.py  segmentation.py  translation.py  vector_store.py
sahitassist/: __init__.py  cli.py  config.py  embeddings.py  normalization.py  pipeline.py  schema.py  segmentation.py  translation.py  utils.py  vector_store.py
scripts/: run_pipeline.sh
tests/: test_normalization.py  test_segmentation.py
